# tensorcheck

./: .gitignore  README.md  example.py  setup.cfg  tensorcheck.py  test.py
tensorcheck/: __init__.py  tensorcheck.py  test.py
