[metadata]
name = tensorcheck
version = 0.0.2
url = https://github.com/tobyshooters/tensorcheck
author = Cristóbal Sciutto
author_email = cristobal.sciutto@gmail.com
description = Run-time validation of tensors for machine-learning systems.
license_files = MIT_LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = tensorcheck
install_requires =
    torch
    numpy
